change background gradient

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 body {
   font-family: "Roboto", sans-serif;
   color: #fff;
-  background: linear-gradient(135deg, #0f0c29 0%, #001f4d 50%, #002966 100%);
+  background: linear-gradient(to top, #4b6c86 0%, #09203f 100%);
   margin: 0rem;
 }
 
