--- a/src/components/proyectos/Proyecto.css
+++ b/src/components/proyectos/Proyecto.css
@@ -47,13 +47,20 @@
   align-items: center;
   align-content: center;
   gap: 2rem;
-  background-color: rgba(0, 0, 0, 0.65); /* Fondo negro semitransparente */
+  background-color: rgba(0, 0, 0, 0.75);
   opacity: 0;
   transition: opacity 0.3s ease;
 }
 
 .tech-logo {
-  width: 50px; /* Ajusta este valor según el tamaño deseado para los logos */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.tech-logo-img {
+  width: 60px;
   height: auto;
 }
 
@@ -160,6 +167,11 @@
 }
 
 @media (max-width: 768px) {
+  .tech-logo-img {
+    width: 40px;
+    height: auto;
+  }
+
   .project-card-container {
     flex-direction: column;
     height: 100%;
